infra/k8s/oguogu/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oguogu-server
  namespace: oguogu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oguogu-server
  template:
    metadata:
      labels:
        app: oguogu-server
    spec:
      containers:
        - name: oguogu-server
          image: registry.crafthomelab.com/oguogu-server
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: oguogu-server
  namespace: oguogu
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: oguogu-server

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: oguogu-server-ingress
  namespace: oguogu
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`oguogu.crafthomelab.com`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: oguogu-server
          port: 8000     
  tls:
    secretName: oguogu-server-cert-tls
